; ModuleID = '/home/carl/AnghaBench/php-src/ext/phar/extr_util.c_phar_add_virtual_dirs.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/phar/extr_util.c_phar_add_virtual_dirs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GC_PERSISTENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @phar_add_virtual_dirs(%struct.TYPE_3__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  br label %10

10:                                               ; preds = %49, %3
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i8* @zend_memrchr(i8* %11, i8 signext 47, i64 %12)
  store i8* %13, i8** %7, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %50

15:                                               ; preds = %10
  %16 = load i8*, i8** %7, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = ptrtoint i8* %16 to i64
  %19 = ptrtoint i8* %17 to i64
  %20 = sub i64 %18, %19
  store i64 %20, i64* %6, align 8
  %21 = load i64, i64* %6, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %15
  br label %50

24:                                               ; preds = %15
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = call i32 @GC_FLAGS(i32* %26)
  %28 = load i32, i32* @GC_PERSISTENT, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %24
  %32 = load i8*, i8** %5, align 8
  %33 = load i64, i64* %6, align 8
  %34 = call i32* @zend_string_init_interned(i8* %32, i64 %33, i32 1)
  store i32* %34, i32** %8, align 8
  br label %39

35:                                               ; preds = %24
  %36 = load i8*, i8** %5, align 8
  %37 = load i64, i64* %6, align 8
  %38 = call i32* @zend_string_init(i8* %36, i64 %37, i32 0)
  store i32* %38, i32** %8, align 8
  br label %39

39:                                               ; preds = %35, %31
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i32*, i32** %8, align 8
  %43 = call i32* @zend_hash_add_empty_element(i32* %41, i32* %42)
  store i32* %43, i32** %9, align 8
  %44 = load i32*, i32** %8, align 8
  %45 = call i32 @zend_string_release(i32* %44)
  %46 = load i32*, i32** %9, align 8
  %47 = icmp eq i32* %46, null
  br i1 %47, label %48, label %49

48:                                               ; preds = %39
  br label %50

49:                                               ; preds = %39
  br label %10

50:                                               ; preds = %48, %23, %10
  ret void
}

declare dso_local i8* @zend_memrchr(i8*, i8 signext, i64) #1

declare dso_local i32 @GC_FLAGS(i32*) #1

declare dso_local i32* @zend_string_init_interned(i8*, i64, i32) #1

declare dso_local i32* @zend_string_init(i8*, i64, i32) #1

declare dso_local i32* @zend_hash_add_empty_element(i32*, i32*) #1

declare dso_local i32 @zend_string_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
